package com.keplereum.backend.domain.enumeration;

/**
 * The ActionType enumeration.
 */
public enum ActionType {
    SWITCH_ORBIT,
    SWITCH_SENSOR,
}
