package com.keplereum.backend.domain.enumeration;

/**
 * The TransactionStatus enumeration.
 */
public enum TransactionStatus {
    CONFIRMED,
    PENDING,
    FAILED,
}
