package com.example.jeeHamlaoui.model;

/**
 * The SatelliteStatus enumeration.
 */
public enum SatelliteStatus {
    LAUNCHED,
    OPERATIONAL,
    MAINTENANCE,
    DECOMMISSIONED,
}
